[package]
name = "myka"
version = "0.1.0"
authors = ["glyph <gnomad@cryptolab.net>"]
edition = "2018"

[dependencies]
clap = { version = "~2.27.0", features = ["yaml"] }
serde = { version = "1.0.87", features = ["derive"] }
serde_json = "1.0.39"

[dependencies.hypercore]
git = "https://github.com/datrs/hypercore.git"
